Revision history for Perl extension App::Followme

{{$NEXT}}

1.07 2014-04-11T23:06:54Z
    - Updated documentation
    - Changed tests for better error reporting

1.06 2014-04-05T22:24:20Z
    - Bug fix, moved check for file existence in is_newer
    - Separated news index creation into its own method, create_news_indexes
    
1.05 2014-04-03T23:29:36Z
    - Rewrote is_newer, deleted index_is_newer
    - Added newlines to end of lines in parse_section

1.04 2014-03-30T22:42:16Z
    - Revised and corrected documentation
    - Rewrote object creation code
    - Changed calling sequence to most_recent_file
    - Moved match_file out of visit
    - Replaced EveryFile with ConfiguredObject
    - Renamed HandleSite to Module
    - Revised code in index_is_newer
    
1.03 2014-03-08T23:46:39Z
    - Check for undefined names in same_file, return false if found
    - Fixed bug in get_excluded_directories, wrong parameter used
    - Removed the Mock package
    - New module to replace Mock, CreateSitemap
    - Simplify templates produced by --init flag        

1.02 2014-03-07T00:02:15Z
    - Rewrote UpdateFtp and modified UpdateSite

1.01 2014-03-04T00:32:07Z
    - Add a config file for current directory to list of config files 

1.00 2014-03-03T02:27:05Z
    - Fixed typo in update_folder run_after vs run_before

0.99 2014-03-02T23:26:27Z
    - Bug fix in calculating topmost configuration parameters
    
0.98 2014-03-02T00:52:26Z
    - Added UploadSite module and UploadFtp and UploadNone submodules
    - Changed configuration parameter module to run_before and run_after
    
0.97 2014-02-04T00:00:20Z
    - Replaced templating code and reorganized classes
    
0.96 2014-01-17T00:13:48Z
    - Get title from body and create summary in App::Followme::CreateNews

0.95 2014-01-01T14:31:16Z
    - Changes to make filename handling OS independent

0.94 2013-12-26T00:54:19Z
    - Text files are now converted to html by Markdown