@@ -6,7 +6,7 @@ use warnings;
 use Cwd;
 use IO::File;
 use File::Spec::Functions qw(splitdir catfile);
-our $VERSION = "1.07";
+our $VERSION = "1.08";
 our $modeline;
 
 require Exporter;
